--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-body,html {
+body,
+html {
   margin: 0;
 }
-#background-div{
+#background-div {
   position: fixed;
   height: 100%;
   width: 100%;
@@ -13,9 +14,19 @@ body,html {
   /* z-index: -1; */
   /* top: 0; */
 }
-#dish-div{
-    background-color: black;
-    border-radius: 160px;
-    height: 320px;
-    width: 320px;
+#dish-div {
+  background-color: black;
+  border-radius: 180px;
+  height: 350px;
+  width: 350px;
+  background-size: contain;
+}
+h1 {
+  position: absolute; /* doesn't affect others*/
+  top: 100px;
+  color: black;
+  font: size 50px;
+  /* justify-content: center;
+  align-items: center; */
+  text-align: center;
 }
