--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,17 @@ html {
   position: fixed;
   height: 100%;
   width: 100%;
+  object-fit: fill;
+  background-repeat: no-repeat;
+  /* justify-items: center;
+  align-content: center; */
+  z-index: -1;
+  /* top: 0; */
+}
+#table-div {
+  position: fixed;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,6 +30,13 @@ html {
   border-radius: 180px;
   height: 350px;
   width: 350px;
+  background-size: contain;
+}
+#drink-div {
+  background-color: black;
+  border-radius: 180px;
+  height: 180px;
+  width: 180px;
   background-size: contain;
 }
 h1 {
