--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ html {
   height: 350px;
   width: 350px;
   background-size: contain;
+  margin: 100px;
 }
 #drink-div {
 position: absolute;
@@ -56,7 +57,6 @@ button {
   border-radius: 8px;
   /* font-size: medium; */
   text-align: center;
-  margin-top: 3%;
 }
 button:hover {
   background-color: rgb(116, 198, 253);
